--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           display: flex;
           align-items: center;
           justify-content: center;
-          margin-top: var(--workSectionSpacing);
+          margin: var(--workSectionSpacing);
         "
       >
         <div id="weedControlBtn">Weed Control</div>
@@ -54,51 +54,51 @@
           "
         >
           <div class="contentHorizontal">
-            <div style="padding: 1em 0">
+            <div class="beforePhoto">
               <div class="title" style="margin-top: 0">Before</div>
               <img src="images/weedControl/yw1Before.jpg" alt="" />
             </div>
-            <div style="padding: 1em 0">
+            <div class="afterPhoto">
               <div class="title">After</div>
               <img src="images/weedControl/yw1After.jpg" alt="" />
             </div>
           </div>
           <div class="contentVertical" style="display: none">
-            <div style="padding: 1em 0.25em">
+            <div class="beforePhoto">
               <div class="title" style="font-size: 1.25em">Before</div>
               <img src="images/weedControl/yw2Before.jpg" alt="" />
             </div>
-            <div style="padding: 1em 0.25em">
+            <div class="afterPhoto">
               <div class="title" style="font-size: 1.25em">After</div>
               <img src="images/weedControl/yw2After.jpg" alt="" />
             </div>
           </div>
           <div class="contentVertical" style="display: none">
-            <div style="padding: 1em 0.25em">
+            <div class="beforePhoto">
               <div class="title" style="font-size: 1.25em">Before</div>
               <img src="images/weedControl/before7.jpg" alt="" />
             </div>
-            <div style="padding: 1em 0.25em">
+            <div class="afterPhoto">
               <div class="title" style="font-size: 1.25em">After</div>
               <img src="images/weedControl/after7.jpg" alt="" />
             </div>
           </div>
           <div class="contentVertical" style="display: none">
-            <div style="padding: 1em 0.25em">
+            <div class="beforePhoto">
               <div class="title" style="font-size: 1.25em">Before</div>
               <img src="images/weedControl/before8.jpg" alt="" />
             </div>
-            <div style="padding: 1em 0.25em">
+            <div>
               <div class="title" style="font-size: 1.25em">After</div>
               <img src="images/weedControl/after8.jpg" alt="" />
             </div>
           </div>
           <div class="contentHorizontal" style="display: none">
-            <div style="padding: 1em 0">
+            <div class="beforePhoto">
               <div class="title" style="margin-top: 0">Before</div>
               <img src="images/weedControl/before9.jpg" alt="" />
             </div>
-            <div style="padding: 1em 0">
+            <div class="afterPhoto">
               <div class="title">After</div>
               <img src="images/weedControl/after9.jpg" alt="" />
             </div>
@@ -115,51 +115,51 @@
           "
         >
           <div class="contentVertical">
-            <div style="padding: 1em 0.25em">
+            <div class="beforePhoto">
               <div class="title" style="font-size: 1.25em">Before</div>
               <img src="images/trimming/before2.jpg" alt="" />
             </div>
-            <div style="padding: 1em 0.25em">
+            <div class="afterPhoto">
               <div class="title" style="font-size: 1.25em">After</div>
               <img src="images/trimming/after2.jpg" alt="" />
             </div>
           </div>
           <div class="contentVertical" style="display: none">
-            <div style="padding: 1em 0.25em">
+            <div class="beforePhoto">
               <div class="title" style="font-size: 1.25em">Before</div>
               <img src="images/trimming/before3.jpg" alt="" />
             </div>
-            <div style="padding: 1em 0.25em">
+            <div class="afterPhoto">
               <div class="title" style="font-size: 1.25em">After</div>
               <img src="images/trimming/after3.jpg" alt="" />
             </div>
           </div>
           <div class="contentHorizontal" style="display: none">
-            <div style="padding: 1em 0">
+            <div class="beforePhoto">
               <div class="title" style="margin-top: 0">Before</div>
               <img src="images/trimming/before4.jpg" alt="" />
             </div>
-            <div style="padding: 1em 0">
+            <div class="afterPhoto">
               <div class="title">After</div>
               <img src="images/trimming/after4.jpg" alt="" />
             </div>
           </div>
           <div class="contentHorizontal" style="display: none">
-            <div style="padding: 1em 0">
+            <div class="beforePhoto">
               <div class="title" style="margin-top: 0">Before</div>
               <img src="images/trimming/before5.jpg" alt="" />
             </div>
-            <div style="padding: 1em 0">
+            <div class="afterPhoto">
               <div class="title">After</div>
               <img src="images/trimming/after5.jpg" alt="" />
             </div>
           </div>
           <div class="contentHorizontal" style="display: none">
-            <div style="padding: 1em 0">
+            <div class="beforePhoto">
               <div class="title" style="margin-top: 0">Before</div>
               <img src="images/trimming/before6.jpg" alt="" />
             </div>
-            <div style="padding: 1em 0">
+            <div class="afterPhoto">
               <div class="title">After</div>
               <img src="images/trimming/after6.jpg" alt="" />
             </div>
@@ -176,31 +176,31 @@
           "
         >
           <div class="contentHorizontal">
-            <div style="padding: 1em 0">
+            <div class="beforePhoto">
               <div class="title" style="margin-top: 0">Before</div>
               <img src="images/handyman/before1.jpg" alt="" />
             </div>
-            <div style="padding: 1em 0">
+            <div class="afterPhoto">
               <div class="title">After</div>
               <img src="images/handyman/after1.jpg" alt="" />
             </div>
           </div>
           <div class="contentHorizontal" style="display: none">
-            <div style="padding: 1em 0">
+            <div class="beforePhoto">
               <div class="title" style="margin-top: 0">Before</div>
               <img src="images/handyman/before2.jpg" alt="" />
             </div>
-            <div style="padding: 1em 0">
+            <div class="afterPhoto">
               <div class="title">After</div>
               <img src="images/handyman/after2.jpg" alt="" />
             </div>
           </div>
           <div class="contentHorizontal" style="display: none">
-            <div style="padding: 1em 0">
+            <div class="beforePhoto">
               <div class="title" style="margin-top: 0">Before</div>
               <img src="images/handyman/before3.jpg" alt="" />
             </div>
-            <div style="padding: 1em 0">
+            <div class="afterPhoto">
               <div class="title">After</div>
               <img src="images/handyman/after3.jpg" alt="" />
             </div>
